--- a/databases-py.adoc
+++ b/databases-py.adoc
@@ -73,17 +73,7 @@ You can leave the rest of the values as their defaults, and then click
 *"Create"*. Then click *Continue to overview*. The MongoDB instance should
 quickly be deployed.
 
-
-image::mongo-group-db-1.png[Service Groups]
-
-You can group services in OpenShift Console in order to display related services
-together in one panel. Click on the chain icon on the right-top corner of the
-`nationalparks` service, choose `mongodb` from the drop-down list in the
-*Group Service to nationalparks* dialog and click on *OK*. The `nationalparks` and
- `mongodb` services are groups and displayed together.
-
-image::mongo-group-db-2.png[Service Groups]
-
+image::mongo-group-db.png[MongoDB deployed]
 
 #### Exercise: Wiring the Application and the Database
 
