--- a/databases-py.adoc
+++ b/databases-py.adoc
@@ -64,10 +64,10 @@ You can see that some of the fields say *"generated if empty"*. This is a
 feature of *Templates* in OpenShift that will be covered in the next lab. For
 now, be sure to use the following values in their respective fields:
 
-* `MONGODB_USER` : `mongodb`
-* `MONGODB_PASSWORD` : `mongodb`
-* `MONGODB_DATABASE`: `mongodb`
-* `MONGODB_ADMIN_PASSWORD` : `mongodb`
+* `MongoDB Connection Username` : *`mongodb`*
+* `MongoDB Connection Password` : *`mongodb`*
+* `MongoDB Database Name`: *`mongodb`* (*NOTE:* Default value of `simpledb` needs to be changed)
+* `MongoDB Admin Password` : *`mongodb`*
 
 You can leave the rest of the values as their defaults, and then click
 *"Create"*. Then click *Continue to overview*. The MongoDB instance should
@@ -95,14 +95,14 @@ line.
 The command line takes a little less time, so let's use that option. First, find
 the name of the DC:
 
-[source]
+[source,bash]
 ----
 $ oc get dc
 ----
 
 Then, use the `oc env` command to set environment variables directly on the DC:
 
-[source]
+[source,bash]
 ----
 $ oc env dc nationalparks -e DB_USERNAME=mongodb -e DB_PASSWORD=mongodb -e DB_NAME=mongodb -e DB_HOST=mongodb
 ----
@@ -112,14 +112,14 @@ NOTE: Note that environment variables in this application are named different th
 After you have modified the *DeploymentConfig* object, you can verify the
 environment variables have been added by viewing the YAML for it:
 
-[source]
+[source,bash]
 ----
 $ oc get dc nationalparks -o yaml
 ----
 
 You should see the following section:
 
-[source]
+[source,yaml]
 ----
 - env:
   - name: DB_USERNAME
@@ -135,7 +135,7 @@ You should see the following section:
 You can also just ask OpenShift to tell you about the environment variables on
 the DC:
 
-[source]
+[source,bash]
 ----
 $ oc env dc/nationalparks --list
 # deploymentconfigs nationalparks, container nationalparks
@@ -151,7 +151,7 @@ magic happened. OpenShift decided that this was a significant enough change to
 warrant updating the internal version number of the *DeploymentConfiguration*. You
 can verify this by looking at the output of `oc get dc`:
 
-[source]
+[source,bash]
 ----
 NAME            REVISION   DESIRED   CURRENT   TRIGGERED BY
 mongodb         1          1         1         config,image(mongodb:3.2)
@@ -163,7 +163,7 @@ Something that increments the version of a *DeploymentConfiguration*, by default
 causes a new deployment. You can verify this by looking at the output of `oc get
 rc`:
 
-[source]
+[source,bash]
 ----
 NAME              DESIRED   CURRENT   READY     AGE
 mongodb-1         1         1         0         24m
@@ -182,14 +182,14 @@ stood up a "new" instance.
 Now that we have a database deployed, we can again visit the `nationalparks` web
 service to query for data:
 
-[source]
+[source,bash]
 ----
 http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/data/all
 ----
 
 And the result?
 
-[source]
+[source,bash]
 ----
 []
 ----
@@ -200,14 +200,14 @@ application and then deployed the database. Nothing actually loaded anything
 
 The application provides an endpoint to do just that:
 
-[source]
+[source,bash]
 ----
 http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/data/load
 ----
 
 And the result?
 
-[source]
+[source,bash]
 ----
 Items inserted in database: 2740
 ----
@@ -227,7 +227,7 @@ for application portability across different environments.  The source file that
 performs the connection as well as creates the database schema can be viewed
 here:
 
-[source,role=copypaste]
+[source,bash,role=copypaste]
 ----
 {% if PARKSMAP_PY %}
 {% if GIT_HOST == "github" %}
@@ -249,7 +249,7 @@ https://docs.openshift.org/latest/dev_guide/environment_variables.html[environme
 variables] section of the Developer Guide.
 ====
 
-[source]
+[source,bash]
 ----
 http://parksmap-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}
 ----
@@ -281,7 +281,7 @@ You can see the code that does this link:https://github.com/openshift-roadshow/p
 Fortunately, the command line provides a convenient way for us to manipulate
 labels. `describe` the `nationalparks` service:
 
-[source]
+[source,bash]
 ----
 $ oc describe route nationalparks
 
@@ -303,21 +303,21 @@ Endpoints:              10.1.9.8:8080
 
 You see that it only has one label: `app=nationalparks`. Now, use `oc label`:
 
-[source]
+[source,bash]
 ----
 $ oc label route nationalparks type=parksmap-backend
 ----
 
 You will see something like:
 
-[source]
+[source,bash]
 ----
 route "nationalparks" labeled
 ----
 
 If you check your browser now:
 
-[source]
+[source,bash]
 ----
 http://parksmap-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/
 ----
