--- a/python.adoc
+++ b/python.adoc
@@ -20,15 +20,15 @@ Docker images using source code from an existing repository.
 https://github.com/openshift/source-to-image[Source-to-Image (S2I)] is another
 open source project sponsored by Red Hat. Its goal:
 
-[source]
-----
+[quote]
+__
 Source-to-image (S2I) is a tool for building reproducible Docker images. S2I
 produces ready-to-run images by injecting source code into a Docker image and
 assembling a new Docker image which incorporates the builder image and built
 source. The result is then ready to use with docker run. S2I supports
 incremental builds which re-use previously downloaded dependencies, previously
 built artifacts, etc.
-----
+__
 
 OpenShift is S2I-enabled and can use S2I as one of its build mechanisms (in
 addition to building Docker images from Dockerfiles, and "custom" builds).
@@ -70,8 +70,9 @@ The repository that we are going to use is available at Github.com
 
 https://github.com/openshift-roadshow/nationalparks-py[https://github.com/openshift-roadshow/nationalparks-py]
 
-To be able to do code changes later in the workshop, you should fork the
+NOTE: To be able to do code changes later in the workshop, you should fork the
 repository into your own Github account.
+
 {% else %}
 The repository that we are going to use is already cloned in the internal GitLab repository
 and located at the following URL:
@@ -99,17 +100,18 @@ with a simple Python S2I image.
 
 In the OpenShift web console, find your
 `{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}` project, and then
-click the *"Add to Project"* button. You will see a number of runtimes that you
-can choose from, but you will want to select the one titled
-`python:3.5`.
+click on `Browse Catalog` in the *"Add to Project"* drop down.
+You will see a number of technologies and runtimes that you
+can choose from.
+Search for `python 3.5` and select it.
 
 image::ocp-runtimes-python.png[Runtimes]
 
-After you click `python:3.5`, on the next screen you will need to enter a
+After you select `python` version `3.5`, on the next screen you will need to enter a
 name and a Git repository URL. For the name, enter `nationalparks`, and for
 the Git repository URL, enter:
 
-[source]
+[source,bash]
 ----
 {% if GIT_HOST == "github" %}
 https://github.com/(your Github username)/nationalparks-py.git
@@ -135,38 +137,21 @@ image::nationalparks-tag-py.png[Runtimes]
 
 {% endif %}
 
-{% if USE_MAVEN %}
-
-To speed build process, a Sonatype Nexus server is running in the environment
-that will cache your dependencies as you pull them down. To use it, you need to
-scroll down to *Build Configuration* and add an environment variable named
-*MAVEN_MIRROR_URL* with value
-`http://nexus.workshop-infra.svc.cluster.local:8081/content/groups/public`
-
-image::new-national-parks-2.png[Runtimes]
-{% endif %}
-
 You can then hit the button labeled *"Create"*. Then click *Continue to
-overview*. You will see this in the web console:
+overview*. You will see the build logs right there:
 
-[source]
-----
-Build nationalparks, #1 Running. A new deployment will be created automatically
-once the build completes.  a few seconds ago View Log
-----
-
-Go ahead and click *"View Log"*.
+image::overview-build-log.png[Build log]
 
 From the command line, you can also see the *Builds*:
 
-[source]
+[source,bash]
 ----
 $ oc get builds
 ----
 
 You'll see output like:
 
-[source]
+[source,bash]
 ----
 NAME              TYPE      FROM          STATUS     STARTED              DURATION
 nationalparks-1   Source    Git@b052ae6   Running    About a minute ago   1m2s
@@ -174,7 +159,7 @@ nationalparks-1   Source    Git@b052ae6   Running    About a minute ago   1m2s
 
 You can also view the build logs with the following command:
 
-[source]
+[source,bash]
 ----
 $ oc logs -f builds/nationalparks-1
 ----
@@ -190,7 +175,7 @@ After the build has completed and successfully:
 In the end, when issuing the `oc get pods` command, you will see that the build Pod
 has finished (exited) and that an application *Pod* is in a ready and running state:
 
-[source]
+[source,bash]
 ----
 NAME                    READY     STATUS      RESTARTS   AGE
 nationalparks-1-tkid3   1/1       Running     3          2m
@@ -202,14 +187,14 @@ If you look again at the web console, you will notice that, when you create the
 application this way, OpenShift also creates a *Route* for you. You can see the
 URL in the web console, or via the command line:
 
-[source]
+[source,bash]
 ----
 $ oc get routes
 ----
 
 Where you should see something like the following:
 
-[source]
+[source,bash]
 ----
 NAME            HOST/PORT                                                   PATH      SERVICES        PORT       TERMINATION
 nationalparks   nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}             nationalparks   8080-tcp
@@ -218,7 +203,7 @@ parksmap        parksmap-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRES
 
 In the above example, the URL is:
 
-[source]
+[source,bash]
 ----
 http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}
 ----
@@ -228,7 +213,7 @@ However, it can give us some data. All back ends that work with the parks map
 front end are required to implement a `/ws/info/` endpoint. To test, the
 complete URL to enter in your browser is:
 
-[source]
+[source,bash]
 ----
 http://nationalparks-{{EXPLORE_PROJECT_NAME}}{{USER_SUFFIX}}.{{ROUTER_ADDRESS}}/ws/info/
 ----
@@ -237,17 +222,17 @@ WARNING: The trailing slash is *required*.
 
 You will see a simple JSON string:
 
-[source]
+[source,json]
 ----
 {"id":"nationalparks","displayName":"National Parks","center":{"latitude":"47.039304","longitude":"14.505178"},"zoom":4}
 ----
 
 Earlier we said:
 
-[source]
-----
+[quote]
+__
 This is a Python application that performs 2D geo-spatial queries
 against a MongoDB database
-----
+__
 
 But we don't have a database. Yet.
