--- a/demos/msa-agile-integration.adoc
+++ b/demos/msa-agile-integration.adoc
@@ -4,7 +4,11 @@
 |===
 |*Length*|~6 min
 |*Difficulty*|Medium
+{% if SLIDES == "google" %}
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_5[Google Slide]
+{% else %}
+|*Slides*|https://www.slideshare.net/secret/1e8Yow4e35IA8w/14[SlideShare]
+{% endif %}
 |*Video*|https://www.youtube.com/watch?v=qEkUTSgiBDE&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=2[YouTube]
 {% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
