--- a/demos/msa-cicd-eap.adoc
+++ b/demos/msa-cicd-eap.adoc
@@ -4,7 +4,11 @@
 |===
 |*Length*|~11 min
 |*Difficulty*|Medium
+{% if SLIDES == "google" %}
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_0[Google Slide]
+{% else %}
+|*Slides*|https://www.slideshare.net/secret/1e8Yow4e35IA8w/36[SlideShare]
+{% endif %}
 |*Video*|https://www.youtube.com/watch?v=6aYohdDRZ3c&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=8[YouTube]
 {% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
