--- a/demos/msa-dev-productivity-jbds.adoc
+++ b/demos/msa-dev-productivity-jbds.adoc
@@ -4,7 +4,11 @@
 |===
 |*Length*|~7 min
 |*Difficulty*|Hard
+{% if SLIDES == "google" %}
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1cdbadc42a_2_4[Google Slide]
+{% else %}
+|*Slides*|https://www.slideshare.net/secret/1e8Yow4e35IA8w/32[SlideShare]
+{% endif %}
 |*Video*|https://www.youtube.com/watch?v=D3ziFwiSMuk&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=5[YouTube]
 {% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*|NA
