--- a/demos/msa-on-demand-env.adoc
+++ b/demos/msa-on-demand-env.adoc
@@ -4,7 +4,11 @@
 |===
 |*Length*|~7 min
 |*Difficulty*|Easy
+{% if SLIDES == "google" %}
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b64d8284a_0_15[Google Slide]
+{% else %}
+|*Slides*|https://www.slideshare.net/secret/1e8Yow4e35IA8w/29[SlideShare]
+{% endif %}
 |*Video*|https://www.youtube.com/watch?v=tiCWGvIneMU&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=4[YouTube]
 {% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
