--- a/demos/msa-overview.adoc
+++ b/demos/msa-overview.adoc
@@ -4,7 +4,11 @@
 |===
 |*Length*|~12 min
 |*Difficulty*|Easy
+{% if SLIDES == "google" %}
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g19ddf4bec2_2_27[Google Slide]
+{% else %}
+|*Slides*|https://www.slideshare.net/secret/1e8Yow4e35IA8w/6[SlideShare]
+{% endif %}
 |*Video*|https://www.youtube.com/watch?v=dIWscwlRN78&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=1[YouTube]
 {% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
