--- a/demos/msa-service-resilience.adoc
+++ b/demos/msa-service-resilience.adoc
@@ -4,7 +4,11 @@
 |===
 |*Length*|~6 min
 |*Difficulty*|Medium
+{% if SLIDES == "google" %}
 |*Slides*|https://docs.google.com/presentation/d/1bt4k9yB0wDOj0d5WzDCWqftPxIizQ7f5S15LysEGFyQ/edit#slide=id.g1b95a791a8_0_24[Google Slide]
+{% else %}
+|*Slides*|https://www.slideshare.net/secret/1e8Yow4e35IA8w/24[SlideShare]
+{% endif %}
 |*Video*|https://www.youtube.com/watch?v=T2JZPQOwyQs&list=PLk57upl23Db1fYboes5JowhAtEB3EWxEP&index=3[YouTube]
 {% if DISPLAY_SIMULATION_LINKS %}
 |*Simulation*  
