--- a/configmap.adoc
+++ b/configmap.adoc
@@ -111,9 +111,9 @@ location in the container filesystem. Using the following command to mount the
 $ oc set volumes dc/nationalparks --add -m /deployments/config --configmap-name=nationalparks
 ----
 
-The above command makes the content of the configmap `ConfigMap`, which you
-created from a file, called `application.properties`, available in the
-`/opt/openshift/config` directory. The `nationalparks` *DeploymentConfiguration*
+The above command makes the content of the configmap `nationalparks`, which you
+created from a file called `application.properties`, available in the
+`/deployments/config` directory. The `nationalparks` *DeploymentConfiguration*
 detects the configuration change, and automatically deploys the *Pod* with
 the new configuration.
 
